# fasapi_templates_fileresponse

./: main.py  pyproject.toml
templates/: item.html
